--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "handlebars": "^4.7.8",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
     "pdf-lib": "^1.17.1",
+    "puppeteer": "^24.27.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
